ansi-text: Fix file picker being partially visible

--- a/static/style.css
+++ b/static/style.css
@@ -27,7 +27,7 @@
 }
 
 .hidden {
-    visibility: hidden;
+    display: none;
 }
 
 header {
